--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -30,6 +30,8 @@ Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.3.2
 Suggests: 
+    devtools,
+    usethis,
     testthat (>= 3.0.0),
     knitr,
     rmarkdown,
