Added unit tests, updated descriptions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(rc_ode)
 export(rc_parallel)
 export(rc_shi_field)
 export(rc_sim)
+export(rc_update_parms)
 export(rc_update_weather)
 import(data.table)
 import(deSolve)
