--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(rc_input_events)
 export(rc_input_rmf)
 export(rc_input_scenario)
 export(rc_ode)
+export(rc_set_refact)
 export(rc_sim)
 export(rc_sim_multi)
 export(rc_time_period)
